# course_2_term_1_lab_9

./: CMakeLists.txt  RPC_core.cpp  RPC_core.h  main.cpp
_tests/: CMakeLists.txt  RPC.test.cpp
